# NEEDLE

./: .gitignore  .needle-predispatch-sha  .needle.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.ci  Dockerfile.ci-deps  LICENSE  README.md  ROADMAP.md  core.385728  core.407900  core.541462  core.568316  core.591203  create-remote-workspace.sh  install.sh  launch-worker.sh  marathon-instruction.md  mend_audit_report.md  test_telemetry_write.rs  test_telemetry_write_debug.rs
.beads/: ALTERNATIVE-SOLUTIONS-SUMMARY.md  beads.db.20260303_080721.bak  beads.db.20260303_080802.bak  beads.db.20260303_082338.bak  beads.db.20260303_082533.bak  beads.db.20260303_085530.bak  beads.db.20260303_091428.bak  beads.db.20260304_181049.bak  beads.db.20260304_190517.bak  beads.db.20260304_190547.bak  beads.db.corrupted  beads.db.corrupted-20260304-035203  beads.db.corrupted-20260304-040441  beads.db.corrupted-20260304-060440  beads.db.corrupted-20260304-060744  beads.db.corrupted-20260304-102646  beads.db.corrupted-20260304-130249  beads.db.corrupted-20260304-130342  beads.db.corrupted-20260304-131342  beads.db.corrupted2  config.yaml  issues.jsonl  issues.jsonl.backup-20260304-035154  learnings.md  nd-1d6-alternative-solutions-summary.md  nd-2ha-diagnosis.md  nd-2j8-resolution.md  nd-3qxa-alternatives.md  nd-pniz-alternatives.md  worker-starvation-alternatives.md
.beads/.beads/: issues.jsonl
.beads/.br_history/: issues.20260303_043444.jsonl  issues.20260308_191935_301204549.jsonl  issues.20260308_192333_128748185.jsonl  issues.20260308_194023_631890205.jsonl  issues.20260308_194256_786204400.jsonl  issues.20260308_194448_449665336.jsonl  issues.20260308_194745_572631147.jsonl  issues.20260308_195100_020652621.jsonl  issues.20260308_195305_384654911.jsonl  issues.20260308_195622_893826273.jsonl  issues.20260308_195934_907111112.jsonl  issues.20260308_200251_957572281.jsonl  issues.20260308_200612_466173669.jsonl  issues.20260308_200929_793588173.jsonl  issues.20260308_201245_936174242.jsonl  issues.20260308_201558_036870313.jsonl  issues.20260308_201923_075747500.jsonl  issues.20260308_202224_993773181.jsonl  issues.20260308_202230_172955883.jsonl  issues.20260308_202233_031015318.jsonl  issues.20260308_202300_657920497.jsonl  issues.20260308_202313_816079060.jsonl  issues.20260308_202316_566221909.jsonl  issues.20260308_202319_266416720.jsonl  issues.20260308_202332_890975599.jsonl  (+278 more)
.claude/: settings.json
bootstrap/: check.sh  detect_os.sh  install.sh
config/: needle.yaml.example
docs/: agent-configuration.md  agent-event-schema.md  billing-models.md  br-wrapper-workspace-fix.md  gap-analysis-nd-12nu.md  nd-356-resolution.md  plan.md  strands.md  streaming.md  worker-starvation-alert-nd-1ki-analysis.md  worker-starvation-alert-nd-1yu-analysis.md  worker-starvation-alert-nd-2vc-analysis.md  worker-starvation-alert-nd-329-analysis.md  worker-starvation-alert-nd-356-analysis.md  worker-starvation-alert-nd-390-analysis.md  worker-starvation-alert-nd-3eh-analysis.md  worker-starvation-alert-nd-3l3-analysis.md  worker-starvation-alert-nd-64v-analysis.md  worker-starvation-alert-nd-7dp3-analysis.md  worker-starvation-alert-nd-dex-analysis.md  worker-starvation-alert-nd-u13-analysis.md  worker-starvation-alternatives.md  worker-starvation-false-positive-nd-3eh.md  worker-starvation-false-positive.md  worker-stuck-behavior-research.md
notes/: needle-b8fv.md  needle-pfan.md
plan/: agent-adapters.md  architecture.md  concurrency.md  configuration.md  implementation-phases.md  plan.md  self-healing.md  state-machine.md  strands.md  telemetry.md
scripts/: build-native.sh  build.sh  install.sh
src/: agent_event.rs  claude_md_placement.rs  commit_hook.rs  lib.rs  main.rs
tests/: README.md  integration_tests.rs  needle_transform_claude.rs  otlp_integration.rs  p2_integration_tests.rs  p3_integration_tests.rs  property_tests.rs  real_br_integration_tests.rs  test_adapters.sh  test_agents.sh  test_analyze.sh  test_attach.sh  test_auto_init_detection.sh  test_billing_models.sh  test_bootstrap.sh  test_bug_scanner.sh  test_check.sh  test_check_mitosis.sh  test_checkout.sh  test_claim.sh  test_cli_pulse.sh  test_completion.sh  test_config.sh  test_config_schema.sh  test_dashboard_server.sh  test_detect_os.sh  test_dispatch.sh  test_effort.sh  test_errors.sh  test_escape.sh  test_events.sh  test_explore.sh  test_fabric_dashboard_integration.sh  test_forced_mitosis.sh  test_hooks_runner.sh  test_hooks_validate.sh  test_init_check_deps.sh  test_install.sh  test_integration_e2e.sh  test_intent.sh  (+36 more)
(+291 files in other folders)
