[package]
name = "needle"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Navigates Every Enqueued Deliverable, Logs Effort"
license = "MIT"

[lib]
name = "needle"
path = "src/lib.rs"

[[bin]]
name = "needle"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging / telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Process management
which = "4"

# Async traits
async-trait = "0.1"

# Cross-platform file locking (flock)
fs2 = "0.4"

# Hashing (prompt content hash for telemetry)
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
