[package]
name = "needle"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Navigates Every Enqueued Deliverable, Logs Effort"
license = "MIT"

[lib]
name = "needle"
path = "src/lib.rs"

[[bin]]
name = "needle"
path = "src/main.rs"

[[bin]]
name = "needle-transform-claude"
path = "src/bin/needle_transform_claude.rs"

[[bin]]
name = "needle-transform-codex"
path = "src/bin/needle_transform_codex.rs"

[features]
default = ["otlp"]
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging / telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Process management
which = "4"

# Async traits
async-trait = "0.1"

# Cross-platform file locking (flock)
fs2 = "0.4"

# Hashing (prompt content hash, binary fingerprinting for hot-reload)
sha2 = "0.10"
hex = "0.4"

# Regex (agent token extraction)
regex = "1"

# Glob pattern matching (doc file discovery)
glob = "0.3"

# HTTP client (self-update)
ureq = "2"

# Multi-pattern string search (sanitizer keyword pre-filter)
aho-corasick = "1"

# TOML parsing (gitleaks config)
toml = "0.8"

# Unix process handling (PID liveness check)
libc = "0.2"

# Random jitter (backoff desynchronization)
rand = "0.8"

# OpenTelemetry / OTLP (gated behind `otlp` feature)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto"], optional = true }
opentelemetry-semantic-conventions = { version = "0.31", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
proptest = "1"
filetime = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
